# freertos-test

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  STM32L475VGTX_FLASH.ld  STM32L476RG_FLASH_SRAM2.ld  stm32l476xx.cmake  tickless.c
misc/cubeMx/: cubeMx.ioc
src/: FreeRTOSConfig.h  app_main.c  app_main.cc  app_main.h  freertos-hooks.c  hal-compat.c  itoa.c  itoa.cc  itoa.h  libc-compat.c  logging.cc  logging.h  lptimTick.c  main.c  main.cc  memfault_handler.c  mpu_demo.c  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  sysmem.c  tickless.c  uart.cc  uart.h
src/stm32l4Periph/: Gpio.h
test/unit-tests/: 01LoggingTest.cc  CMakeLists.txt
