CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_VERBOSE_MAKEFILE OFF)

PROJECT (free)
ENABLE_LANGUAGE (ASM-ATT)

INCLUDE_DIRECTORIES("src/")

SET (FREE_RTOS_ROOT "deps/FreeRTOS")
INCLUDE_DIRECTORIES("${FREE_RTOS_ROOT}/FreeRTOS/Source/include")
INCLUDE_DIRECTORIES("${FREE_RTOS_ROOT}/FreeRTOS/Source/portable/GCC/ARM_CM4F")

INCLUDE_DIRECTORIES("deps/etl/include/")
include_directories("deps/GSL/include")
include_directories("deps/fmt/include")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf
        "src/app_main.cc"
        "src/app_main.h"
        "src/main.cc"
        "src/tickless.c"
        "src/etl_profile.h"
        "src/FreeRTOSConfig.h"
        "src/stm32l4xx_hal_conf.h"
        "src/stm32l4xx_hal_msp.c"
        "src/stm32l4xx_it.c"
        "src/system_stm32l4xx.c"
        "src/libc-compat.c"
        "src/hal-compat.c"
        "src/freertos-hooks.c"

        "src/logging.cc"

        "${FREE_RTOS_ROOT}/FreeRTOS/Source/list.c"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/queue.c"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/tasks.c"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/timers.c"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/portable/GCC/ARM_CM4F/portmacro.h"
        "${FREE_RTOS_ROOT}/FreeRTOS/Source/portable/MemMang/heap_4.c"
        "${STARTUP_CODE}"

        "deps/fmt/src/format.cc"

        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_can.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_comp.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cortex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dcmi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma2d.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dsi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_exti.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_firewall.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ramfunc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gfxmmu.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hcd.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_irda.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_iwdg.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lcd.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lptim.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nand.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nor.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ospi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_qspi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rng.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smbus.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sram.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_swpmi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tsc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart_ex.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_wwdg.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_adc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_comp.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crs.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dac.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma2d.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_exti.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_fmc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_i2c.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lptim.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lpuart.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_opamp.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_pwr.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rcc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rng.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rtc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_sdmmc.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_spi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_swpmi.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_tim.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usart.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usb.c"
        "deps/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_utils.c"

        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_can.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_comp.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cortex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dcmi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma2d.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dsi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_exti.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_firewall.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ramfunc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gfxmmu.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hcd.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_iwdg.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lcd.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lptim.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nand.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nor.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ospi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_qspi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rng.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smbus.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sram.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_swpmi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tsc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart_ex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_wwdg.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_adc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_bus.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_comp.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_cortex.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crs.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dac.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma2d.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dmamux.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_exti.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_fmc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_i2c.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_iwdg.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lptim.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lpuart.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_opamp.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_pwr.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rcc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rng.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rtc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_sdmmc.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_spi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_swpmi.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_system.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_tim.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usart.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usb.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_utils.h"
        "deps/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_wwdg.h"

)

FIND_PROGRAM (OPENOCD openocd)
ADD_CUSTOM_TARGET("upload" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${OPENOCD} -f /home/iwasz/local/share/openocd/scripts/interface/stlink.cfg -f /home/iwasz/local/share/openocd/scripts/target/stm32l4x.cfg -c 'program ${CMAKE_PROJECT_NAME}.elf verify reset exit')
ADD_CUSTOM_TARGET("debug" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${OPENOCD} -f /home/iwasz/local/share/openocd/scripts/interface/stlink.cfg -f /home/iwasz/local/share/openocd/scripts/target/stm32l4x.cfg)

ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin ALL DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
